# dragonfruit-tui

./: CONTRIBUTING.md  GRAMMAR_EXAMPLES.md  GRAMMAR_IMPROVEMENT_PLAN.md  GRAMMAR_RECOMMENDATIONS.md  MANIFEST.in  QUICK_REFERENCE.md  README.md  create_duckdb.py  demo_enhanced_grammar.py  live_examples_demo.py  pyproject.toml  runnn.py  test_backward_compatibility.py
.github/workflows/: publish.yml
src/dragonfruit/: __init__.py  __main__.py
src/harlequin/: __init__.py  adapter.py  app_base.py  bindings.py  cache.py  cli.py  colors.py  copy_widgets.py  driver.py  history.py  keymap.py  keys_app.py  locale_manager.py  messages.py  nl_input.py  nl_sql_enhanced.lark  nl_to_sql.py  op_lark.lark  transaction_mode.py
src/harlequin_duckdb/: adapter.py  interactions.py
src/harlequin_sqlite/: catalog.py  completions.py  interactions.py
src/scripts/: export_screenshots.py  profile_buffers.py  profile_fast_query.py
temp/dragonfruit_tui-1.0.23.dist-info/: METADATA  RECORD  entry_points.txt  top_level.txt
temp/harlequin/: __main__.py  actions.py  app.py  app.tcss  catalog.py  catalog_cache.py  config.py  config_wizard.py  copy_formats.py  editor_cache.py  exception.py  export.py  nl2sql.lark  nl_sql.lark  nl_to_sql_enhanced.py  op_lark1.lark  options.py  plugins.py  windows_timezone.py
temp/harlequin_duckdb/: __init__.py  catalog.py  cli_options.py  completions.py
temp/harlequin_sqlite/: __init__.py  adapter.py  cli_options.py
temp/harlequin_vscode/: __init__.py
tests/: test_nl_to_sql.py  test_nl_to_sql_enhanced.py
tests/functional_tests/: test_app.py  (+1 more)
(+19 files in other folders)
