[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonfruit-tui"
version = "1.0.24"
description = "A Natural Language to SQL TUI IDE for your terminal."
readme = "README.md"
authors = [{ name = "Laxita Jain", email = "laxitajain912@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "textual>=0.89.1",
    "textual-fastdatatable>=0.12.0",
    "textual-textarea>=0.15.0",
    "click>=8.1.3",
    "rich-click>=1.7.1",
    "duckdb>=0.8.0",
    "shandy-sqlfmt>=0.19.0",
    "platformdirs>=3.10,<5.0",
    "questionary>=2.0.1",
    "lark>=1.1.9",
    "tomlkit>=0.12.5,<0.14.0"
]

[project.scripts]
dragonfruit = "dragonfruit.__main__:main"

[project.entry-points."harlequin.adapter"]
duckdb = "harlequin_duckdb:DuckDbAdapter"
sqlite = "harlequin_sqlite:HarlequinSqliteAdapter"

[project.entry-points."harlequin.keymap"]
vscode = "harlequin_vscode:VSCODE"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dragonfruit*", "harlequin*"]
